recursion.cons.lessons.recursion.cons.Min.scala.code
def min(l:List[Int]): Int = {
  def compare(list:List[Char]):List[Char]={
    var x:Int=0
    if(list.head<(list.tail).head){
      x=list.head
      list=list.tail
      list.head=x
    }
    return list
  }
  if(l.tail==Nil){
    return l.head
  }else{
    return(min(compare(l)))
  }
}